CM-832: Fix spacing issue on parks page

--- a/src/gatsby/src/styles/listPage.scss
+++ b/src/gatsby/src/styles/listPage.scss
@@ -1,6 +1,9 @@
 @import "variables.scss";
 
 // font
+h1 {
+  margin-bottom: 0;
+}
 h2 {
   a {
     color: $colorBlue;
